--- a/scm/package.json
+++ b/scm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scm",
+  "name": "scm2.0",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "@tailwindcss/cli": "^4.0.0"
   }
 }
