--- a/SCM with React/backend/docker-compose.yaml
+++ b/SCM with React/backend/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus-config.yml:/etc/prometheus/prometheus.yml
+      - ./config/prometheus/prometheus-config.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
@@ -29,6 +29,31 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
       - prometheus
+    networks:
+      - monitoring
+
+  loki:
+    image: grafana/loki:2.9.2
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: ["-config.file=/mnt/config/loki-config.yaml"]
+    volumes:
+      - ./config/loki/loki-config.yaml:/mnt/config/loki-config.yaml
+    networks:
+      - monitoring
+
+  promtail:
+    image: grafana/promtail:3.0.0
+    container_name: promtail
+    user: root  # Ensure Promtail has access to logs
+    privileged: true
+    volumes:
+      - ./config/promtail/promtail-config.yaml:/mnt/config/promtail-config.yaml  # Promtail config
+      - /Users/alokverma/Desktop/logs:/var/logs  # Correct log directory
+    command: ["-config.file=/mnt/config/promtail-config.yaml"]
+    depends_on:
+      - loki
     networks:
       - monitoring
 
